<resources>
    <string name="pet_description">Miguel no espaço com um capacete de astronauta</string>
    <string name="title">Qual o nome do mascote?</string>
    <string name="hint">Escreva um nome para o mascote</string>
    <string name="save">salvar</string>
    <string name="spacepet">Space Pet</string>
    <string name="save_switch">manter salvo</string>
    <string name="amei">amei</string>
</resources>