<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_450"
            android:contentDescription="@string/pet_description"
            android:scaleType="centerCrop"
            android:src="@drawable/miguel_mochileiro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/size_24"
            app:layout_constraintTop_toBottomOf="@id/ivPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_60"
            android:layout_marginTop="@dimen/size_24"
            android:hint="@string/hint"
            android:textAlignment="center"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:ignore="TouchTargetSizeCheck"/>
        <Button
            android:id="@+id/btSaveName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/azul_claro"
            android:layout_marginHorizontal="@dimen/size_150"
            android:layout_marginTop="@dimen/size_36"
            android:textSize="@dimen/text_14"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swSaveData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_24"
            android:text="@string/save_switch"
            android:textColor="@color/cinza"
            android:minHeight="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>